--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,8 @@
   --color-gray-800: #13161b;
   --color-gray-900: #0f1216;
 
-  --font-heading: var(--font-oxanium)
-  --font-sans: var(--font-montserrat)
+  --font-heading: var(--font-oxanium);
+  --font-sans: var(--font-montserrat);
+
+  --radius-xl: 0.625rem;
 }
